--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <link rel="stylesheet" href="./MeetMe Personal_files/flaticon.css">
         <!-- main css -->
         <link rel="stylesheet" href="./MeetMe Personal_files/style(1).css">
-        <link rel="stylesheet" href="./MeetMe Personal_files/responsive.css">
+		<link rel="stylesheet" href="./MeetMe Personal_files/responsive.css">
+		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     </head>
     <body>
         
@@ -70,24 +72,19 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="./MeetMe Personal_files/personal.webp" alt="">
+								<img id = "me" src="./MeetMe Personal_files/me.JPG" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
-									<h6>Hello Everybody, i am</h6>
-									<h3>Alan Polyak</h3>
-									<h4>Junior UI/UX Developer</h4>
+									<h6></h6>
+									<h3 class = "name">Alan Polyak</h3>
+									<h4 class = "name"><span class = 'gray'>D</span>ata Scientist &#8226; <span class = 'gray'>D</span>eveloper &#8226; <span class = 'gray'>D</span>esigner</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
-									</ul>
-									<ul class="list personal_social">
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="https://colorlib.com/preview/theme/meetme/#"><i class="fa fa-linkedin"></i></a></li>
+										<li><i class="lnr lnr-graduation-hat"></i> Cornell University</li>
+										<li><i class="lnr lnr-phone-handset"></i>  (347) 987 6422</li>
+										<li><i class="lnr lnr-envelope"></i>  alanpolyak@gmail.com</li>
+										<li><i class="fab fa-linkedin-in fa-2x"></i><a id = "none" href="http://linkedin.com/in/alanpolyak" target="_blank"><button class="main_btn" id = "linkedin" >Connect on LinkedIn</button></a></li>
 									</ul>
 								</div>
 							</div>
@@ -135,7 +132,7 @@
         				<div class="tools_expert">
         					<div class="skill_main">
 								<div class="skill_item">
-									<h4>After Effects <span class="counter">85</span>%</h4>
+									<h4>Machine Learning <span class="counter">85</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
@@ -143,23 +140,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Photoshop <span class="counter">90</span>%</h4>
-									<div class="progress_br">
-										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-										</div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Illustrator <span class="counter">70</span>%</h4>
-									<div class="progress_br">
-										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
-										</div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Sublime <span class="counter">95</span>%</h4>
+									<h4>Data Mining and Analytics <span class="counter">95</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
@@ -167,10 +148,26 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sketch <span class="counter">75</span>%</h4>
+									<h4>Web Development <span class="counter">80</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>UX Research <span class="counter">80</span>%</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>Project Management <span class="counter">90</span>%</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 										</div>
 									</div>
 								</div>
