--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="./MeetMe Personal_files/magnific-popup.css">
         <link rel="stylesheet" href="./MeetMe Personal_files/flaticon.css">
         <!-- main css -->
-        <link rel="stylesheet" href="./MeetMe Personal_files/style(1).css">
+        <link rel="stylesheet" href="./MeetMe Personal_files/style2.css">
 		<link rel="stylesheet" href="./MeetMe Personal_files/responsive.css">
 		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
@@ -78,8 +78,15 @@
 								<div class="personal_text">
 									<h6></h6>
 									<h3 class = "name">Alan Polyak</h3>
-									<h4 class = "name"><span class = 'gray'>D</span>ata Scientist &#8226; <span class = 'gray'>D</span>eveloper &#8226; <span class = 'gray'>D</span>esigner</h4>
-									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+									<h4 class = "name"><span class = 'gray'>D</span>
+										<span
+										class="txt-rotate"
+										data-period="1000"
+										data-rotate='["ATA SCIENTIST", "EVELOPER", "ESIGNER"]'>
+										</span>
+										
+									</h4>
+									<p>Working at the crossroads of data science, product, and user experience to create a positive social impact.</p>
 									<ul class="list basic_info">
 										<li><i class="lnr lnr-graduation-hat"></i> Cornell University</li>
 										<li><i class="lnr lnr-phone-handset"></i>  (347) 987 6422</li>
@@ -102,30 +109,11 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-        					<div class="row">
-        						<div class="col-md-4">
-        							<div class="wel_item">
-        								<i class="lnr lnr-database"></i>
-        								<h4>$2.5M</h4>
-        								<p>Total Donation</p>
-        							</div>
-        						</div>
-        						<div class="col-md-4">
-        							<div class="wel_item">
-        								<i class="lnr lnr-book"></i>
-        								<h4>1465</h4>
-        								<p>Total Projects</p>
-        							</div>
-        						</div>
-        						<div class="col-md-4">
-        							<div class="wel_item">
-        								<i class="lnr lnr-users"></i>
-        								<h4>3965</h4>
-        								<p>Total Volunteers</p>
-        							</div>
-        						</div>
-        					</div>
+        					<p>I am a passionate team leader, data scientist, developer, and designer interested in creating a meaningful impact on the world through artificial intelligence, 
+								data visualization, information ethics, and novel technologies.</p>
+								<p>I am a senior at Cornell University, majoring in Biometry & Statistics and Information Science, 
+								soon to be starting my Master's in Data Science. Currently, I am looking for quantitative opportunities in organizations that have strong missions to change the world for the better. </p>
+							<p>Outside of the workplace, my hobbies are quite eclectic. I am a music producer and urban photographer with a passion for politics and graphic design. I love to study new languages in addition to the 5 I can speak fluently, and try foreign cuisine as well.</p>
         				</div>
         			</div>
         			<div class="col-lg-6">
@@ -591,7 +579,8 @@ Copyright ©<script type="text/javascript" async="" src="./MeetMe Personal_files
         <script src="./MeetMe Personal_files/jquery.waypoints.min.js" type="text/javascript"></script>
         <script src="./MeetMe Personal_files/jquery.counterup.min.js" type="text/javascript"></script>
         <script src="./MeetMe Personal_files/mail-script.js" type="text/javascript"></script>
-        <script src="./MeetMe Personal_files/theme.js" type="text/javascript"></script>
+		<script src="./MeetMe Personal_files/theme.js" type="text/javascript"></script>
+		<script src="./MeetMe Personal_files/typewriter.js" type="text/javascript"></script>
 
 
     
