--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<p>Working at the crossroads of data science, product, and user experience to create a positive social impact.</p>
 									<ul class="list basic_info">
 										<li><i class="fas fa-user-graduate fa-2x"></i> Cornell University</li>
-										
+										<li><i class="fas fa-phone fa-2x"></i> (347) 987 6422</li>
 										<li><i class="fas fa-envelope fa-2x"></i>  atp68@cornell.edu</li>
 										<li><i class="fab fa-linkedin-in fa-2x"></i><a id = "none" href="http://linkedin.com/in/alanpolyak" target="_blank"><button class="main_btn" id = "linkedin" >Connect on LinkedIn</button></a></li>
 										<li><i class="fas fa-file-pdf fa-2x"></i><a id = "none" href="MeetMe Personal_files/resume.pdf" target="_blank"><button class="main_btn" id = "linkedin" >View Resume</button></a></li>
