--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- Required meta tags -->
         
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="format-detection" content="telephone=no">
         <link rel="icon" href="MeetMe Personal_files/favicon.png" type="image/png">
         <title>Alan Polyak</title>
         <!-- Bootstrap CSS -->
@@ -76,7 +77,7 @@
 							<div class="media-body">
 								<div class="personal_text">
 									<h6></h6>
-									<h3 class = "name">Alan Polyak</h3>
+									<h3 class = "name">Alan Polyakk</h3>
 									<h4 class = "name"><span class = 'gray'></span>
 										<span
 										class="txt-rotate"
