--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="media-body">
 								<div class="personal_text">
 									<h6></h6>
-									<h3 class = "name">Alan Polyakk</h3>
+									<h3 class = "name">Alan Polyak</h3>
 									<h4 class = "name"><span class = 'gray'></span>
 										<span
 										class="txt-rotate"
