resume/positions update

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 										<span
 										class="txt-rotate"
 										data-period="1000"
-										data-rotate='["DATA SCIENTIST", "DEVELOPER", "DESIGNER"]'>
+										data-rotate='["DATA SCIENTIST", "DEVELOPER", "DESIGNER", "DATA-DRIVEN PRODUCT MANAGER"]'>
 										</span>
 										
 									</h4>
-									<p>Working at the crossroads of data science, product, and user experience to create a positive social impact.</p>
+									<p>Working at the crossroads of data science, product, ethics, and user experience to create a positive social impact.</p>
 									<ul class="list basic_info">
 										<li><i class="fas fa-user-graduate fa-2x"></i> Cornell University</li>
 										<li><i class="fas fa-phone fa-2x"></i> (347) 987 6422</li>
@@ -113,7 +113,7 @@
         					<h4>About Myself</h4>
         					<p>I am a passionate team leader, data scientist, developer, and designer interested in creating a meaningful impact on the world through artificial intelligence, 
 								data visualization, information ethics, and novel technologies.</p>
-								<p>I am a student at Cornell University, pursuing my Master’s in Operations Research and Information Engineering, focusing on machine learning and management. As an undergrad at Cornell, I majored in Biometry & Statistics and Information Science.  Currently, I am looking for quantitative opportunities in organizations that have strong missions to change the world for the better. </p>
+								<p>I am a student at Cornell University, pursuing my Master’s in Operations Research and Information Engineering, focusing on data science and management. As an undergrad at Cornell, I majored in the department of Statistics & Data Science, concentrating in Computer Science & Machine Learning.  Currently, I am looking for technical opportunities in organizations that have strong missions to change the world for the better. </p>
 							<p>Outside of the workplace, my hobbies are quite eclectic. I am a music producer and urban photographer with a passion for politics and graphic design. I love to study new languages in addition to the five I can speak fluently, and try foreign cuisine as well.</p>
         				</div>
         			</div>
@@ -153,7 +153,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Project Management <span class="counter">90</span>%</h4>
+									<h4>Project/Product Management <span class="counter">90</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -192,7 +192,7 @@
 											<p>Aug. 2019 to present</p>
 										</div>
 										<div class="media-body">
-											<h4>Teaching Assistant</h4>
+											<h4>Graduate Teaching Assistant</h4>
 											<h5>Cornell Computing and Information Science</h5>
 											<p class = "location">INFO 4240 | Designing Technology for Social Impact</p>
 										</div>
@@ -218,7 +218,7 @@
 											<p>May 2018 to Aug. 2018</p>
 										</div>
 										<div class="media-body">
-											<h4>Data Scientist Intern - Data Products</h4>
+											<h4>Data Scientist and Product Management Intern</h4>
 											<h5>VISA Inc.</h5>
 											<p class = "location">San Francisco Bay Area | CA</p>
 										</div>
@@ -333,7 +333,7 @@
         				<div class="feature_item" id = "project2">
 						
 								<i class="fas fa-brain"></i>
-        					<h4>Machine Learning</h4>
+        					<h4>Data Mining & Analytics</h4>
         					<p>Case Study - Predicting what job you're best suited for at Google using feature engineering, text mining, naive bayes, random forest, logistic regression, and LASSO.</p>
 						</div>
 						</a>
@@ -342,7 +342,7 @@
 						<a href = "https://limitless-gorge-36503.herokuapp.com" target = "_blank">
         				<div class="feature_item" id = "project3">
 								<i class="fas fa-cogs"></i>
-        					<h4>Web Development</h4>
+        					<h4>Backend Development</h4>
         					<p>Created and deployed a web app for a client that uses HTML, PHP, SQL, JavaScript, and web data. Contact me for login details to view all of the design/database interactivity. </p>
 						</div>
 					</a>
