--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
 									<h4 class> Technical Coursework </h4>
 									<ul class = "courseul">
 										<li>Advanced Statistical Modeling</li>
+										<li>Advanced Machine Learning for Intelligent Systems</li>
 										<li>Applied Econometrics</li>
 										<li>Biological Statistics and Quantitative Genomics</li>
 										<li>Calculus III / Multivariable Calculus</li>
