--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 								<div class="personal_text">
 									<h6></h6>
 									<h3 class = "name">Alan Polyak</h3>
-									<h4 class = "name"><span class = 'gray'></span>
-										<span
+									<h4 class = "name"><span class = 'gray'></span>DATA
+										<span 
 										class="txt-rotate"
 										data-period="1000"
-										data-rotate='["DATA SCIENTIST", "DATA ETHICIST", "DATA LEADER"]'>
+										data-rotate='["SCIENTIST", "ETHICIST", "LEADER"]'>
 										</span>
 										
 									</h4>
