--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="format-detection" content="telephone=no">
-		<meta name=”Description” content=”Hey there, Google searcher! I'm Alan and I'm a data scientist. Check out my professional webpage!”>
+		<meta name=”description” content=”Hey there, Google searcher! I'm Alan and I'm a data scientist. Check out my professional webpage!”>
         <link rel="icon" href="MeetMe Personal_files/favicon.png" type="image/png">
         <title>Alan Polyak</title>
         <!-- Bootstrap CSS -->
