--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="description" content="Hey there, Google searcher! My name's Alan and I'm a data scientist. Check out my professional webpage here!">
-        <link rel="icon" href="MeetMe Personal_files/favicon.png" type="image/png">
+        <link rel="icon" href="MeetMe Personal_files/favicon2.jpeg" type="image/jpeg">
         <title>Alan Polyak</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="./MeetMe Personal_files/bootstrap.css">
