--- a/index.html
+++ b/index.html
@@ -353,21 +353,21 @@
 						</a>
         			</div>
         			<div class="col-lg-4 col-md-6">
-						<a href = "https://drive.google.com/file/d/1BIu96lZCAgxKk5KbiczhpSLSMIaZpbWA/view?usp=sharing" target="_blank">
+						<a href = "https://drive.google.com/file/d/1BIu96lZCAgxKk5KbiczhpSLSMIaZpbWA/view" target="_blank">
         				<div class="feature_item" id = "project2">
 						
-								<i class="fas fa-brain"></i>
+							<i class="fas fa-project-diagram"></i>
         					<h4>Data Mining & Analytics</h4>
         					<p>Case Study - Predicting what job you're best suited for at Google using feature engineering, text mining, naive bayes, random forest, logistic regression, and LASSO.</p>
 						</div>
 						</a>
         			</div>
         			<div class="col-lg-4 col-md-6">
-						<a href = "https://limitless-gorge-36503.herokuapp.com" target = "_blank">
+						<a href = "https://drive.google.com/file/d/1emePMnBL9fqdY3HGw07hwpd7x7e9Zs5f/view" target = "_blank">
         				<div class="feature_item" id = "project3">
 								<i class="fas fa-cogs"></i>
-        					<h4>Backend Development</h4>
-        					<p>Created and deployed a web app for a client that uses HTML, PHP, SQL, JavaScript, and web data. Contact me for login details to view all of the design/database interactivity. </p>
+        					<h4>Operations Research & Optimization</h4>
+        					<p>Optimizing supply chain production for the largest wine producer in the US with Quadratic and Mixed Integer Linear Programming. </p>
 						</div>
 					</a>
         			</div>
