--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>I am a data scientist and algorithmic justice advocate with professional analytics experience in the tech sector, specifically software, sustainability, payments, and hardware industries. Algorithmic justice, to me, means ensuring large-scale ML systems are not hurting marginalized communities, and goes beyond that to alleviate the effects of historical oppression. I take justice for intersectional identities seriously and personally. </p>
+        					<p>I am a senior data scientist and algorithmic justice advocate with professional analytics experience in the tech sector, specifically software, sustainability, payments, and hardware industries. Algorithmic justice, to me, means ensuring large-scale ML systems are not hurting marginalized communities, and goes beyond that to alleviate the effects of historical oppression. I take justice for intersectional identities seriously and personally. </p>
 								<p>I started off my career saving endangered African forest elephants with AI, and ever since, I knew I wanted to dedicate my work to creating a positive social impact through the power of big data. I am looking for product-oriented data science roles that leverage my expertise in analytics and the quantitative decision sciences to assist in data-driven and responsible decision making. I am interested in companies that have strong and authentic missions to change the world for the better.</p>
 							<p>Outside of the workplace, my hobbies are quite eclectic. I am a polyglot of 5 languages and am currently learning Mandarin, I make AI-generated art, and I brew kombucha with some experimental/funky flavors.</p>
         				</div>
@@ -189,11 +189,24 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Dec. 2021 to Present</p>
+											<p>Nov. 2022 to Present</p>
+										</div>
+										<div class="media-body">
+											<h4>Data Scientist - Enterprise</h4>
+											<h5>Instacart</h5>
+											<p class = "location">San Francisco Bay Area | CA</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Dec. 2021 to Aug. 2022</p>
 										</div>
 										<div class="media-body">
 											<h4>Data Science Lead - Creator Messaging Well-Being </h4>
-											<h5>Instagram | Meta, Formerly Known as 'Facebook'</h5>
+											<h5>Meta, Formerly Known as 'Facebook'</h5>
 											<p class = "location">San Francisco Bay Area | CA</p>
 										</div>
 									</div>
