--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>I am a senior data scientist, algorithmic justice advocate, and product leader with professional influencing product strategy and company leadership with data-driven insights and responsible decision making. My career is focused on my passion for social good, utilizing my expertise in product analytics, experimentation, and decision sciences to protect user trust, safety, and community health, while generating value and growth. </p>
+        					<p>I am a senior data scientist, algorithmic justice advocate, and product leader with professional experience influencing product strategy and company leadership with data-driven insights and responsible decision making. My career is focused on my passion for social good, utilizing my expertise in product analytics, experimentation, and decision sciences to protect user trust, safety, and community health, while generating value and growth. </p>
 								<p>I started off my career saving endangered African forest elephants with AI, and ever since, I knew I wanted to dedicate my work to creating a positive social impact through the power of big data. I am looking for product-oriented data science roles in companies that have strong and authentic missions to change the world for the better.</p>
 							<p>Outside of the workplace, my hobbies are quite eclectic. I am a polyglot of 6 languages, a certified nutritionist, an AI artist, and a kombucha brewer with some experimental/funky flavors.</p>
         				</div>
